<resources>
    <string name="app_name">Manager+</string>
    <string name="navigation_message">消息</string>
    <string name="navigation_database">数据库</string>
    <string name="navigation_task">任务</string>
    <string name="navigation_people">用户</string>
    <string name="action_settings">Settings</string>

    <string name="title_language">编程语言</string>

    <string name="title_login">用户登陆</string>
    <string name="hint_username">用户名</string>
    <string name="hint_password">密码</string>
    <string name="button_login">登 陆</string>


    <string name="navigation_book">例子</string>
    <string name="navigation_example">控件</string>
    <string name="navigation_my_blog">博客</string>
    <string name="navigation_about">关于</string>


    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="press_again_exit_app">再按一次退出程序</string>

    <string name="app_description">本APP用来演示Material Design控件的使用</string>
    <string name="app_github_url">github地址：\nhttps://github.com/chenyangcun/MaterialDesignExample</string>

    <string name="title_book">书籍</string>

    <string name="book_title_1">失控</string>
    <string name="book_description_1">作者: [美] 凯文·凯利 \n副标题: 全人类的最终命运和结局 \n出版年: 2010-12 \n页数: 707 \n定价: 88.00元 </string>

    <string name="book_title_2">黑客与画家</string>
    <string name="book_description_2">作者: [美] Paul Graham\n副标题: 硅谷创业之父Paul Graham文集\n出版年: 2011-4\n页数: 264\n定价: 49.00元</string>

    <string name="book_title_3">七周七语言</string>
    <string name="book_description_3">作者: Bruce A.Tate\n副标题: 理解多种编程范型\n出版年: 2012-5-8\n页数: 246\n定价: 59.00元</string>

    <string name="search">搜索</string>
    <string name="input_hint">请输入关键字</string>
    <string name="input_prefill"></string>
    <string name="default_search_keyword">花千骨</string>

    <string name="title_buttom_tab">Buttom Tab</string>
    <string name="navigation_pepple">用户</string>
    <string name="error_invalid_password">密码太短了</string>
    <string name="account_empty">未登录</string>
    <string name="error_no_name">用户名不能为空</string>
    <string name="error_no_pass">请输入密码</string>
    <string name="error_invalid_name">用户名太短</string>
    <string name="error_no_phone">电话号码不能为空</string>
    <string name="error_no_email">邮箱号不能为空</string>
    <string name="error_no_repass">请确认密码</string>
    <string name="error_invalid_repassword">重复密码太短</string>
    <string name="error_invalid_phone">请输入正确的手机号</string>
    <string name="QianggouUrl">http://119.29.191.229:2888/com/try</string>
    <string name="error_no_newpass">新密码为空</string>
    <string name="error_no_renewpass">新密码重复为空</string>
    <string name="error_nosame_password">两次密码不一致</string>
    <string name="error_invalid_email">邮箱格式不正确</string>
    <string name="clear_table">http://120.27.41.245:3001/admin/clearTable?tablename=</string>
    <string name="databaseinfo">http://120.27.41.245:3001/admin/databaseinfo</string>
    <string name="navigation_record">日志</string>
    <string name="getrecord">http://120.27.41.245:3001/admin/getRecord</string>
    <string name="tasksetting">任务设置</string>
    <string name="upload">提交</string>
    <string name="cancle">取消</string>
    <string name="edittask">http://120.27.41.245:3001/admin/tasksetting</string>
    <string name="error_no_cycle">周期不能为空</string>
    <string name="error_no_interface">接口不能为空</string>
    <string name="error_no_tag">标签不能为空</string>
    <string name="error_no_type">类型不能为空</string>
    <string name="error_invalid_cricle">包含不是数字的字符</string>
    <string name="getuserinfo">http://120.27.41.245:3001/admin/getUser</string>
</resources>
