<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.deng.manager.view.TaskEditActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/titlebar"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:gravity="center"
            android:text="@string/tasksetting"
            android:textColor="@color/primary"
            android:textSize="22sp"
            android:textStyle="bold"
            android:translationZ="2dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/black" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="60dp">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="34dp"
                android:layout_marginStart="34dp"
                android:text="标签："
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <EditText
                android:id="@+id/ev_tag"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@+id/textView3"
                android:layout_toRightOf="@+id/textView3" />
        </RelativeLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/gray" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="60dp">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="34dp"
                android:layout_marginStart="34dp"
                android:text="接口："
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <EditText
                android:id="@+id/ev_interface"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@+id/textView4"
                android:layout_toRightOf="@+id/textView4" />
        </RelativeLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/gray" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="60dp">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="34dp"
                android:layout_marginStart="34dp"
                android:text="类型："
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <EditText
                android:id="@+id/ev_type"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@+id/textView5"
                android:layout_toRightOf="@+id/textView5" />
        </RelativeLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/gray" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="60dp">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="34dp"
                android:layout_marginStart="34dp"
                android:text="周期："
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <EditText
                android:id="@+id/ev_cricle"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@+id/textView6"
                android:layout_toRightOf="@+id/textView6" />
        </RelativeLayout>

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="周期是以5分钟为底,1表示1x5min为周期"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <Button
            android:id="@+id/bt_submit_task"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_gravity="center_horizontal"
            android:layout_margin="16sp"
            android:background="@color/primary"
            android:text="@string/upload"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/bt_cancel"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_gravity="center_horizontal"
            android:layout_margin="16sp"
            android:background="@color/window_background"
            android:text="@string/cancle"
            android:textColor="@color/black" />
    </LinearLayout>
    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:indeterminate="true"
        android:visibility="gone" />
</FrameLayout>
